# next_talk

./: .gitignore  README.md  docker-compose.yml
images/frontend/nexttalk/: package-lock.json
images/frontend/nexttalk/app/: page.tsx
images/nexttalk/: Dockerfile  package-lock.json  package.json
images/nexttalk/app/: page.tsx
images/nexttalk_backend/: Cargo.toml  Dockerfile  Dockerfile.dev
images/nexttalk_backend/src/: config.rs
images/nexttalk_backend/src/db/: connection.rs
images/nexttalk_backend/src/handlers/: user_handler.rs
images/nexttalk_backend/src/helpers/: helpersmod.rs  mod.rs
images/nexttalk_backend/src/routes/: mod.rs
images/terra/: main.tf
scripting/: grunt.sh
terraform/gcp_files/: gcp_script.sh  main.tf
terraform/gcp_files/.terraform/modules/: modules.json
terraform/gcp_files/modules/gcp_instance/: main.tf
terraform/gcp_files/modules/gcp_volume/: main.tf
terraform/gcp_files/modules/security_group/: main.tf
