[package]
name = "nexttalk_backend"
version = "0.1.0"
edition = "2024"  # or keep "2024" only if you're using nightly Rust

[[bin]]
name = "nexttalk_backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }

# Env
dotenvy = "0.15"

# UUID for IDs
uuid = { version = "1", features = ["v4", "serde"] }

# JSON (for request/response bodies)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# JWTs
jsonwebtoken = "9.2"

# HTTP statuses
http = "1"
tokio-postgres = "0.7.13"
